# ferret-redistributor

./: .gitattributes  .gitignore  .gitmodules  Dockerfile.dev  Dockerfile.runtime  README.md  config.json  docker-compose.prod.yml  docker-compose.yml  post.json
.github/workflows/: analytics-nightly.yml  build.yml  ci.yml  deploy-hetzner.yml  instagram-trending-nightly.yml  linkedin-post.yml  lint.yml  planner-hourly.yml  posting.yml  scheduler.yml
.husky/: README.md  pre-commit
_docs/: hybrid-python-go-architecture.md  product_roadmap.md
app/app-postiz/: docker-compose.yml
backend/: env.example
backend/go/: .env.example  Makefile  go.mod  go.sum
backend/python/google_trends/: README.md  __init__.py  pyproject.toml
backend/python/google_trends/_tests/: test_deps.py  test_query.py
backend/python/google_trends/api/: __init__.py  _exceptions.py  _requests.py  _responses.py  utils.py
backend/python/google_trends/scripts/: quickstart_trends_alpha.py  quickstart_trends_compare.py
docs/: ci-deployment.md  toon-support.md  toon-universal-model.md
docs/postiz/: ADD_PROVIDER.md  DEVELOPMENT.md
frontend/postiz/: README.md  postiz.env.example
go/: .env.example  .gitignore  Makefile  go.mod  go.sum
go/.husky/: README.md  pre-commit
go/_data/: README.md
go/docs/: README.md  architecture.md  auth.md  deploy.md  eowr.md  import_export.md  telemetry.md
go/migrations/: 000001_initial_schema.up.sql
infra/otel/: collector.yaml
python/: main.py
python/automation/: scheduler.py
python/cache/: file_cache.py
python/calendar/: cli.py  (+1 more)
shared/: README.md
(+383 files in other folders)
